RESOLVED FIXED11712
REGRESSION: Crash when clicking JS link on crateandbarrel.com (window.open("http[...]"))
https://bugs.webkit.org/show_bug.cgi?id=11712
Summary REGRESSION: Crash when clicking JS link on crateandbarrel.com (window.open("h...
Miles Bainbridge
Reported 2006-11-29 10:48:39 PST
When viewing a product on www.crateandbarrel.com, clicking the "More Views" link causes the browser to instantly crash. This happens every time, using build 17915. I have not tested with earlier builds to see how far back this issue goes, but I do remember this functioning properly a couple of months ago.
Attachments
Log entry for this particular crash (23.53 KB, text/plain)
2006-11-29 10:53 PST, Miles Bainbridge
no flags
Fix w/changelog (1.30 KB, patch)
2006-11-29 14:24 PST, Geoffrey Garen
ggaren: review+
Miles Bainbridge
Comment 1 2006-11-29 10:53:08 PST
Created attachment 11665 [details] Log entry for this particular crash Additionally, this is on an Intel Mac (haven't tested PPC yet) running 10.4.8, with all software updates that were available as of 11-29-06 installed.
Alexey Proskuryakov
Comment 2 2006-11-29 12:14:40 PST
Confirmed. Seems to be a very recent regression - r17901 didn't crash for me.
mitz
Comment 3 2006-11-29 13:53:31 PST
Reduction: javascript:window.open("http://www.ibm.com/")
Geoffrey Garen
Comment 4 2006-11-29 14:24:54 PST
Created attachment 11674 [details] Fix w/changelog
Geoffrey Garen
Comment 5 2006-11-29 14:25:29 PST
Committed revision 17931.
Note You need to log in before you can comment on or make changes to this bug.