        Reviewed by Anders Carlsson.

Fixed http://bugs.webkit.org/show_bug.cgi?id=11712
        REGRESSION: Crash when clicking JS link on crateandbarrel.com (window.open("http[...]"))

        This was an accidental commit by Anders.

        Chrome can't use the FrameView at window.open time, because it doesn't
        exist yet.

        * page/Chrome.cpp:
        (WebCore::Chrome::pageRect):



Canonical link: https://commits.webkit.org/15061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17931 268f45cc-cd09-0410-ab3c-d52691b4dbfc